fixed widget header layout bug

--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -329,13 +329,15 @@ aside {
 		margin-top: 4px;}
 }
 
+aside .widget h1,
 .widget h2 {
 	font-size: 1.2em;
 	background: transparent no-repeat 10px bottom  url('../img/header_line.png');
 	padding-bottom: 5px;
 	margin-bottom: 0;
 	padding-left: 20px;
-	padding-top: 10px;}
+	padding-top: 10px;
+	margin-top:1em;}
 
 .widget h1 strong,
 .widget h2 strong {
